# camel-raisim-projects

./: .gitignore  CMakeLists.txt  README.md
camel-canine/: CMakeLists.txt  README.md
camel-canine-leg-left/canine-leg-left_controller/ControlUtils/: CMakeLists.txt
camel-canine-leg-left/canine-leg-left_controller/ControlUtils/src/: GRFEstimatorETO.cpp  GRFEstimatorMLP.cpp
camel-canine-leg-left/canine-leg-left_util/: CMakeLists.txt
camel-canine-leg-left/canine-leg-left_util/include/canine-leg-left_util/: Command.hpp  RobotDescription.hpp  SharedMemory.hpp
camel-canine-leg-left/canine-leg-left_util/src/: Command.cpp
camel-canine-leg-left_temp/: CMakeLists.txt
camel-canine-leg-left_temp/canine-leg-left_controller/ControlUtils/: CMakeLists.txt
camel-canine-leg-left_temp/canine-leg-left_controller/ControlUtils/src/: GRFEstimator.cpp  (+2 more)
camel-canine-leg-left_temp/canine-leg-left_controller/IDcontroller/: CMakeLists.txt
camel-canine-leg-left_temp/canine-leg-left_controller/MPCcontroller/: CMakeLists.txt
camel-canine-leg-left_temp/canine-leg-left_controller/PDcontroller/: CMakeLists.txt
camel-canine-leg-left_temp/canine-leg-left_demo/: CanineLegLeftSimul.cpp
camel-canine-leg-left_temp/canine-leg-left_simulation/: CMakeLists.txt
camel-canine-leg-left_temp/canine-leg-left_simulation/src/: SimulCommand.cpp  SimulContolPanel.cpp  SimulMain.cpp  SimulVisualizer.cpp
camel-canine-leg-left_temp/canine-leg-left_util/src/: Command.cpp
camel-canine-simulation/: CMakeLists.txt
camel-canine-simulation/GUI/: operationMainwindow.cpp  operationMainwindow.h  operationMainwindow.ui  ui_operationMainwindow.h
camel-canine-simulation/include/: CanineSimMain.hpp  CanineSimSharedMemory.hpp
camel-canine-simulation/include/Simulation/: CanineSimSimulation.hpp
camel-canine-simulation/src/: CanineSimMain.cpp
camel-canine-simulation/src/Simulation/: CanineSimSimulation.cpp
camel-canine/GUI/: SharedMemory.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
camel-canine/canine_controller/ControlMain/: CMakeLists.txt
camel-canine/canine_controller/ControlUtils/: CMakeLists.txt
camel-canine/canine_controller/GaitScheduler/: CMakeLists.txt
camel-canine/canine_controller/LowController/: CMakeLists.txt
camel-canine/canine_controller/PDQPcontrol/: CMakeLists.txt
camel-canine/canine_controller/PDcontroller/: CMakeLists.txt
camel-canine/canine_controller/WBController/: CMakeLists.txt
camel-canine/canine_controller/convexMPC/: CMakeLists.txt
camel-canine/canine_demo/: CanineMain.cpp  CanineSimul.cpp
camel-canine/canine_fsm/: CMakeLists.txt
camel-canine/canine_fsm/src/: MainFSM.cpp
camel-canine/canine_simulation/: CMakeLists.txt
camel-canine/canine_simulation/src/: SimulCommand.cpp  SimulContolPanel.cpp  SimulKalmanFilter.cpp  SimulMain.cpp  SimulStateEstimator.cpp  SimulVisualizer.cpp  SimulXboxCommand.cpp
camel-canine/canine_util/: CMakeLists.txt
camel-canine/canine_util/src/: CanMotorBackward.cpp  CanMotorForward.cpp  Command.cpp  Filter.cpp  MotorCAN.cpp  RealTimeThread.cpp  RobotMath.cpp  StateEstimator.cpp  ThreadFunction.cpp  ThreadNRT.cpp  ThreadRT.cpp  XboxCommand.cpp  XboxController.cpp
camel-canine/canine_visualizer/: CMakeLists.txt
camel-canine/canine_visualizer/GUI/: ui_mainwindow.h
camel-canine/canine_visualizer/canine_raisim/: CMakeLists.txt
camel-canine/canine_visualizer/src/: RaisimInit.cpp  RobotVisualization.cpp
camel-canine/include/camel-canine/: CanineMain.hpp
camel-canine/src/: CanineMain.cpp
camel-canineV2/: CMakeLists.txt  README.md
camel-canineV2/canineV2_controller/ControlMain/: CMakeLists.txt
camel-canineV2/canineV2_controller/ControlUtils/: CMakeLists.txt
camel-canineV2/canineV2_controller/PDcontroller/: CMakeLists.txt
camel-canineV2/canineV2_controller/WBController/: CMakeLists.txt
camel-canineV2/canineV2_controller/convexMPC/: CMakeLists.txt
camel-canineV2/canineV2_demo/: CanineV2Main.cpp  CanineV2Simul.cpp
camel-canineV2/canineV2_fsm/: CMakeLists.txt
camel-canineV2/canineV2_fsm/src/: MainFSM.cpp
camel-canineV2/canineV2_simulation/: CMakeLists.txt
camel-canineV2/canineV2_simulation/src/: SimulCommand.cpp  SimulContolPanel.cpp  SimulKalmanFilter.cpp  SimulMain.cpp  SimulStateEstimator.cpp  SimulVisualizer.cpp  SimulXboxCommand.cpp
camel-canineV2/canineV2_util/: CMakeLists.txt
camel-canineV2/canineV2_util/src/: CanMotorBackward.cpp  CanMotorFL.cpp  CanMotorFR.cpp  CanMotorForward.cpp  CanMotorRL.cpp  CanMotorRR.cpp  Command.cpp  Filter.cpp  RobotMath.cpp  StateEstimator.cpp  XboxCommand.cpp  XboxController.cpp
camel-canineV2/canineV2_visualizer/canineV2_gui/: CMakeLists.txt
camel-canineV2/canineV2_visualizer/canineV2_raisim/: CMakeLists.txt
camel-marten-leg/: CMakeLists.txt
camel-marten-leg/marten-leg_controller/ControlMain/: CMakeLists.txt
camel-marten-leg/marten-leg_controller/ControlUtils/: CMakeLists.txt
camel-marten-leg/marten-leg_controller/GRFcontroller/: CMakeLists.txt
camel-marten-leg/marten-leg_controller/IDcontroller/: CMakeLists.txt
camel-marten-leg/marten-leg_controller/MPCcontroller/: CMakeLists.txt
camel-marten-leg/marten-leg_controller/PDcontroller/: CMakeLists.txt
camel-marten-leg/marten-leg_demo/: MartenLegMain.cpp  MartenLegSimul.cpp
camel-marten-leg/marten-leg_fsm/: CMakeLists.txt
camel-marten-leg/marten-leg_fsm/src/: MainFSM.cpp
camel-marten-leg/marten-leg_simulation/: CMakeLists.txt
camel-marten-leg/marten-leg_simulation/src/: SimulCommand.cpp  SimulContolPanel.cpp  SimulMain.cpp  SimulVisualizer.cpp
camel-marten-leg/marten-leg_util/: CMakeLists.txt
camel-marten-leg/marten-leg_util/src/: CanMotor.cpp  Command.cpp
camel-marten-leg/marten-leg_visualizer/marten-leg_gui/: CMakeLists.txt
camel-marten-leg/marten-leg_visualizer/marten-leg_raisim/: CMakeLists.txt
camel-thirdparty/QcustomPlot/: CMakeLists.txt
camel-thirdparty/QcustomPlot/src/: qcustomplot.cpp
camel-tools/sensor/: CMakeLists.txt
camel-tools/sensor/include/: LordImu3DmGx5Ahrs.hpp  T265.hpp  sensor.hpp
camel-tools/sensor/src/: LordImu3DmGx5Ahrs.cpp  T265.cpp
(+228 files in other folders)
